tests/tests/ui/create_via_scoped_macro.stderr
error[E0277]: this scope does not support scoped creation
  --> tests/ui/create_via_scoped_macro.rs:47:32
   |
47 |     let _ = toasty::create!(in user.tags() { id: 1, name: "urgent" });
   |                                ^^^^ this relation scope cannot create records
   |
help: the trait `toasty::schema::CreateScope` is not implemented for `_::Many<toasty::schema::Via>`
  --> tests/ui/create_via_scoped_macro.rs:27:17
   |
27 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^
   = note: Only direct relation scopes support scoped creation.
   = note: Multi-step (`via`) relation scopes can be queried and filtered, but Toasty cannot create records through them because that would require creating or choosing intermediate records.
note: required by a bound in `toasty::codegen_support::scope_fields`
  --> $WORKSPACE/crates/toasty/src/codegen_support.rs
   |
   | pub fn scope_fields<S: CreateScope>(_scope: &S) -> S::Path<S::Item> {
   |                        ^^^^^^^^^^^ required by this bound in `scope_fields`
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
